added start menu and login form

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Casino Motaro</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+    <link rel="stylesheet" href="style/bootstrap.min.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
+    <div id="gameField"></div>
     <script src="lib/jquery-3.1.0.min.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
     <script src="scripts/common/main.js"></script>
 </body>
+
 </html>
