--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <body>
     <div id="gameField"></div>
-    <script src="lib/jquery-3.1.0.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
-    <script src="scripts/common/main.js"></script>
+    <script src="lib/system.js"></script>
+    <script src="scripts/common/systemjs-config.js"></script>
 </body>
 
 </html>
