--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="gameField"></div>
+    <img id="image-roulette" src="img/roulette-image.png" style="display: none;">
     <script src="lib/system.js"></script>
     <script src="scripts/common/systemjs-config.js"></script>
 </body>
