--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <title>Casino Motaro</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
-    <link rel="stylesheet" href="style/bootstrap.min.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="./style/bootstrap.min.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
     <div id="gameField"></div>
     <img id="image-roulette" src="img/roulette-image.png" style="display: none;">
-    <script src="lib/system.js"></script>
-    <script src="scripts/common/systemjs-config.js"></script>
+    <script src="./lib/system.js"></script>
+    <script src="./scripts/common/systemjs-config.js"></script>
 </body>
 
 </html>
