--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img id="image-roulette" src="img/roulette-image.png" style="display: none;">
     <script src="./lib/system.js"></script>
     <script src="./scripts/common/systemjs-config.js"></script>
+    <script src="./lib/crypto-js/crypto-js.js"></script>
 </body>
 
 </html>
