--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+    <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     <div id="gameField"></div>
     <img id="image-roulette" src="img/roulette-image.png" style="display: none;">
     <script src="./lib/system.js"></script>
